--- a/Allcomponents/MainWindow.xaml
+++ b/Allcomponents/MainWindow.xaml
@@ -10,11 +10,11 @@
     <Grid>
 
         <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" >
-            
+
             <TextBlock Text="TextBlock" FontSize="24" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,10"/>
 
             <TextBox Name="InputName" Text="TextBox" Margin="0,0,0,10"></TextBox>
-            
+
             <Button Content="Button" Width="100" Height="30" HorizontalAlignment="Center"/>
 
 
@@ -40,10 +40,10 @@
 
             <ProgressBar Name="ProgressBar" Width="200" Margin="0,10,0,0" HorizontalAlignment="Center"/>
 
-            <Image Source="Images/7.png" Width="50" Height="50" Margin="0,10,0,0" HorizontalAlignment="Center"/>
-            
-            
-            
+            <Image Source="/7.png" Width="50" Height="50" Margin="0,10,0,0" HorizontalAlignment="Center"/>
+
+
+
 
 
         </StackPanel>
